control-plane/custom-gateway-api/conformance/tests/gateway-invalid-route-kind.yaml
apiVersion: consul.networking.io/v1beta1
kind: Gateway
metadata:
  name: gateway-only-invalid-route-kind
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: InvalidRoute
---
apiVersion: consul.networking.io/v1beta1
kind: Gateway
metadata:
  name: gateway-supported-and-invalid-route-kind
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: InvalidRoute
          - kind: HTTPRoute
